--- a/views/show.erb
+++ b/views/show.erb
@@ -11,6 +11,13 @@
   </p>
 </div>
 
+<div >
+  <p class="lead">
+    All Wrong Guesses:
+    <span class="guesses"><%= @game.all_wrong_guess %></span>
+  </p>
+</div>
+
 <p class="alert alert-success">
   Word so far:
   <span class="word"><%= @game.word_with_guesses %></span>
